--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,8 +57,21 @@ header .logo-title {
   margin-left: 100px;
 }
 
-h1 {
+a {
+  color: #a51c30;
+}
+
+a:hover {
+  color: #a51c30;
+}
+
+h1, h2, h3, h4 {
   margin-bottom: 60px;
+  font-family: "Hoefler Text A","Hoefler Text B",serif;
+  font-weight: bold;
+}
+p {
+  font-family: Georgia, serif;
 }
 
 .cover {
@@ -82,8 +95,7 @@ h1 {
 }
 
 .main-grid .main-item {
-  background-color: bisque;
-  background-image: url('harvard.jpg');
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0,0,0,0.6)), url(../images/harvard.jpg);
   grid-row-start: 1;
   grid-row-end: 3;
   position: relative;
@@ -91,14 +103,34 @@ h1 {
 
 .main-item h1 {
   position: absolute;
-  bottom: 0;
+  bottom: 60px;
   color: white;
   left: 30px;
 }
 
+.main-item p {
+  position: absolute;
+  bottom: 60px;
+  color: white;
+  left: 30px;
+}
+
+.main-item a {
+  position: absolute;
+  color: white;
+  left: 30px;
+  bottom: 50px;
+  text-decoration: underline;
+}
+
 .main-grid .item {
-  background-color: aliceblue;
+  background-color: #efeeeb;
   height: 300px;
+  padding: 40px;
+}
+
+.main-grid .item h3 {
+  margin-bottom: 30px;
 }
 
 .main-item img {
