--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@ header .logo-title {
 
 a {
   color: #a51c30;
+  text-decoration: underline;
 }
 
 a:hover {
@@ -81,7 +82,7 @@ p {
 }
 
 .horizontal-container {
-  padding: 80px 0;
+  padding: 60px 0;
 }
 
 /* Grids*/
@@ -146,8 +147,19 @@ p {
 }
 
 .subsite-grid .item {
-  background-color: aliceblue;
+  background-color: #efeeeb;
   height: 450px;
+  padding: 40px;
+}
+
+.subsite-grid .item h4 {
+  border-bottom: 1px solid gray;
+  padding-bottom: 20px;
+  margin-bottom: 40px;
+}
+
+.subsite-grid .item p {
+  max-height: 215px;
 }
 
 /* Footer */
