--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -96,9 +100,10 @@ aside li {
 }
 
 aside img {
-  position: absolute;
-  width: 30px;
-  right: 30px;
+  position: absolute !important;
+  width: 30px !important;
+  height: 30px !important;
+  right: 30px !important;
   top: 20px;
 }
 
@@ -125,7 +130,7 @@ p {
   font-family: Georgia, serif;
 }
 
-.menu-icon {
+#menu-icon {
   display: none;
 }
 
@@ -352,9 +357,12 @@ p {
 .profile-container {
   position: relative;
   display: grid;
-  height: 220px;
   grid-template-columns: 32% 68%;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
+  width: 80%;
+  height: 300px;
+  border-bottom: 1px solid lightgray;
+  padding-bottom: 30px;
 }
 
 .profile-container * {
@@ -404,8 +412,8 @@ p {
 
 .profile-cell {
   width: 300px;
-  height: 500px;
-  margin-bottom: 20px;
+  height: 450px;
+  margin-bottom: 50px;
   margin-right: 20px;
   display: flex;
   flex-direction: column;
@@ -413,7 +421,8 @@ p {
 
 .profile-cell img {
   position: relative;
-  width: 250px;
+  width: 300px;
+  height: 250px;
 }
 
 .profile-cell * {
@@ -488,6 +497,18 @@ and (max-device-width: 991px) { */
   .subsite-grid .item {
     height: 300px;
   }
+
+  .profile-container {
+    width: 90%;
+    grid-template-columns: 100%;
+    grid-template-rows: 240px auto;
+    height: auto;
+  }
+
+  .profile-container  .profile-info {
+    grid-row-start: 2;
+    grid-column-start: 1;
+  }
 }
 
 /*  MOBILE HEADER VIEW  */
@@ -501,12 +522,13 @@ and (max-device-width: 991px) { */
     padding: 0 40px 0 60px;
   }
 
-  .menu-icon {
+  #menu-icon {
     display: block;
     object-fit: cover;
     width: 30px;
     height: 30px;
     align-self: center;
     justify-self: end;
+    position: relative;
   }
 }
